--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Calle de Elisa 16 · Madrid, Spain, 28026 · (+34) 644020844 ·
                         <a href="mailto:name@email.com">abarcacrespom@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a videogame developer with a great passion about programming, experienced in a lot of languages, databases and agil methodologies. My purpose is to create something new and impress the world with it.                    </p>
+                    <p class="lead mb-5">I am a videogame developer with great passion on programming, experienced in a variety of languages, databases and agil methodologies. My purpose is to create something new and impress the world with it.                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://es.linkedin.com/in/manuel-abarca-crespo-3931481a2" title="Manuel Abarca Crespo" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/dakeXd" title="dakeXd" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
@@ -104,69 +104,162 @@
                 </div>
             </section>
             <hr class="m-0" />
+            
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages</div>
-                    <ul class="fa-ul">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-terminal"></i></span>
-                            Java <progress class="progress-bar" max="100" value="80"></progress>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-terminal"></i></span>
-                            Javascript <progress class="progress-bar" max="100" value="60"></progress>
-                        </li>
-                    </ul>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-
+                    <table>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                Java 
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="90"></progress>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                C++ 
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="80"></progress>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                C#
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="80"></progress>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                Javascript 
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="75"></progress>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                HTML/CSS
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="65"></progress>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                C 
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="60"></progress>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                Python
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="50"></progress>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                R
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="30"></progress>
+                            </td>
+                        </tr>
+                    </table>
+                    <br>
                     <div class="subheading mb-3">Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
+                    <table>
+                        <tr>
+                            <td>
+                                <span><i class="fas fa-terminal"></i></span>
+                                Unity
+                            </td>
+                            <td>
+                                <progress class="progress-bar" max="100" value="95"></progress>
+                            </td>
+                        </tr>
+                         <tr>
+                        <td>
+                            <span><i class="fas fa-terminal"></i></span>
+                            GitHub
+                        </td>
+                        <td>
+                            <progress class="progress-bar" max="100" value="80"></progress>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span><i class="fas fa-terminal"></i></span>
+                            SQL/SQLite
+                        </td>
+                        <td>
+                            <progress class="progress-bar" max="100" value="75"></progress>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span><i class="fas fa-terminal"></i></span>
+                            Photoshop
+                        </td>
+                        <td>
+                            <progress class="progress-bar" max="100" value="65"></progress>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span><i class="fas fa-terminal"></i></span>
+                            Excel
+                        </td>
+                        <td>
+                            <progress class="progress-bar" max="100" value="60"></progress>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span><i class="fas fa-terminal"></i></span>
+                            SketchUp
+                        </td>
+                        <td>
+                            <progress class="progress-bar" max="100" value="55"></progress>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span><i class="fas fa-terminal"></i></span>
+                            MongoDB
+                        </td>
+                        <td>
+                            <progress class="progress-bar" max="100" value="50"></progress>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span><i class="fas fa-terminal"></i></span>
+                            3DS Max
+                        </td>
+                        <td>
+                            <progress class="progress-bar" max="100" value="50"></progress>
+                        </td>
+                    </tr>
+                    </table>
                 </div>
             </section>
             <hr class="m-0" />
