Interests and Skills

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">My projects</a></li>
                 </ul>
             </div>
         </nav>
@@ -47,7 +47,8 @@
                         Calle de Elisa 16 · Madrid, Spain, 28026 · (+34) 644020844 ·
                         <a href="mailto:name@email.com">abarcacrespom@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a videogame developer with great passion on programming, experienced in a variety of languages, databases and agil methodologies. My purpose is to create something new and impress the world with it.                    </p>
+                    <p class="lead mb-5">I am a videogame developer with great passion on programming, experienced in a variety of languages, databases and agil methodologies. My purpose is to create something new and impress the world with it.</p>
+                    <p class="lead mb-5">I do a lot of projects in team using GitHub and Unity, but i am also used to complex problem solving in any language, web development and creating java and android applications.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://es.linkedin.com/in/manuel-abarca-crespo-3931481a2" title="Manuel Abarca Crespo" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/dakeXd" title="dakeXd" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
@@ -150,7 +151,7 @@
                         <tr>
                             <td>
                                 <span><i class="fas fa-terminal"></i></span>
-                                HTML/CSS
+                                HTML5 / CSS 3
                             </td>
                             <td>
                                 <progress class="progress-bar" max="100" value="65"></progress>
@@ -184,7 +185,7 @@
                             </td>
                         </tr>
                     </table>
-                    <br>
+        
                     <div class="subheading mb-3">Tools</div>
                     <table>
                         <tr>
@@ -208,10 +209,19 @@
                     <tr>
                         <td>
                             <span><i class="fas fa-terminal"></i></span>
-                            SQL/SQLite
+                            SQL / SQLite
                         </td>
                         <td>
                             <progress class="progress-bar" max="100" value="75"></progress>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span><i class="fas fa-terminal"></i></span>
+                            Android Studio
+                        </td>
+                        <td>
+                            <progress class="progress-bar" max="100" value="70"></progress>
                         </td>
                     </tr>
                     <tr>
@@ -267,55 +277,39 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a programmer, I enjoy most of my time being indoors, but i a nature lover and i enjoy going to parks and green places in general. I spend most of my time with the computer, working and programming or playing videogames and watching series.</p>
+                    <p class="mb-0">I am passionated about anime and videogames, particularly sci-fi and fantasy genres, and strategy and action games.</p>
+                    <p class="mb-0">I also love technology and I spend a lot of time searching and learning new things in the web, like AI, robotics or engineering </p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
+                    <h2 class="mb-5">My projects</h2>
+                    <table class="imageTable mb-0">
+                        <tr>
+                            <td>
+                                <a href= "https://dakexd.itch.io/noodletaker" target="_blank" ><img src="assets/img/noodletaker.png" class="itchioImage"></a>
+                            </td>
+                            <td>
+                                <a href= "https://miniponti.itch.io/un-famous" target="_blank"><img src="assets/img/unfamous.png"  class="itchioImage"></a>
+                            </td>
+                            <td>
+                                <a href= "https://sirallanberg.itch.io/annoying-penguins" target="_blank"><img src = "assets/img/penguin.png"  class="itchioImage"></a> 
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Noodletaker</td>
+                            <td>Un-Famous</td>
+                            <td>Annoting Penguins</td>
+                        </tr>
+                        <tr>
+                            <td><b>-Fase beta-</b></td>
+                            <td><b>-On hold-</b></td>
+                            <td><b>-Terminado-</b></td>
+                        </tr>
+                    </table>
                 </div>
             </section>
         </div>
