--- a/index.html
+++ b/index.html
@@ -287,29 +287,64 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">My projects</h2>
-                    <table class="imageTable mb-0">
-                        <tr>
-                            <td>
-                                <a href= "https://dakexd.itch.io/noodletaker" target="_blank" ><img src="assets/img/noodletaker.png" class="itchioImage"></a>
-                            </td>
-                            <td>
-                                <a href= "https://miniponti.itch.io/un-famous" target="_blank"><img src="assets/img/unfamous.png"  class="itchioImage"></a>
-                            </td>
-                            <td>
-                                <a href= "https://sirallanberg.itch.io/annoying-penguins" target="_blank"><img src = "assets/img/penguin.png"  class="itchioImage"></a> 
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Noodletaker</td>
-                            <td>Un-Famous</td>
-                            <td>Annoting Penguins</td>
-                        </tr>
-                        <tr>
-                            <td><b>-Fase beta-</b></td>
-                            <td><b>-On hold-</b></td>
-                            <td><b>-Terminado-</b></td>
-                        </tr>
-                    </table>
+                    <ul class="list-inline centerAlign">
+                        <li class="list-inline-item">
+                            <span>
+                                <a href= "https://salmorejito-games.itch.io/tales-of-the-dumbgeon" target="_blank"><img src = "https://img.itch.zone/aW1nLzc0OTQwMjkucG5n/315x250%23c/eOFXwq.png"  class="itchioImage"></a> 
+                                <p class="mb-0 centerAlign">Tales of the Dumbgeon</p>
+                                <p class="mb-0 centerAlign">-Fase beta-</p>
+                                <br>
+                            </span>
+                        </li>
+                        <li class="list-inline-item">
+                            <span>
+                                <a href= "https://dakexd.itch.io/trivia-games" target="_blank"><img src = "https://img.itch.zone/aW1nLzc0MTUzOTIucG5n/315x250%23c/IDOW1g.png"  class="itchioImage"></a> 
+                                <p class="mb-0 centerAlign">Triviagames</p>
+                                <p class="mb-0 centerAlign">-Terminado-</p>
+                                <br>
+                            </span>
+                        </li>
+                        <li class="list-inline-item">
+                            <span>
+                                <a href= "https://dakexd.itch.io/noodletaker" target="_blank" ><img src="https://img.itch.zone/aW1nLzYzODg1MDkucG5n/315x250%23c/yfOWra.png" class="itchioImage"></a>
+                                <p class="mb-0 centerAlign">Noodletaker</p>
+                                <p class="mb-0 centerAlign">-Fase beta-</p>
+                                <br>
+                            </span>
+                        </li>
+                        <li class="list-inline-item">
+                            <span>
+                                <a href= "https://dakexd.itch.io/zombieshooter-vr" target="_blank"><img src = "https://img.itch.zone/aW1nLzc0OTQyNTIucG5n/315x250%23c/chT%2FYl.png"  class="itchioImage"></a> 
+                                <p class="mb-0 centerAlign">Zombie Shooter VR</p>
+                                <p class="mb-0 centerAlign">-Fase Alfa-</p>
+                                <br>
+                            </span>
+                        </li>
+                        <li class="list-inline-item">
+                            <span>
+                                <a href= "https://sayotito.itch.io/juliettes-portrait" target="_blank"><img src = "https://img.itch.zone/aW1nLzc0MTU0ODUucG5n/315x250%23c/r2cF1r.png"  class="itchioImage"></a> 
+                                <p class="mb-0 centerAlign">Juliette's Portrait</p>
+                                <p class="mb-0 centerAlign">-Terminado-</p>
+                                <br>
+                            </span>
+                        </li>
+                        <li class="list-inline-item">
+                            <span>
+                                <a href= "https://miniponti.itch.io/un-famous" target="_blank"><img src="https://img.itch.zone/aW1nLzUyMDQyOTEucG5n/315x250%23c/hyf8Qr.png"  class="itchioImage"></a>
+                                <p class="mb-0 centerAlign">Un-Famous</p>
+                                <p class="mb-0 centerAlign">-On hold-</p>
+                                <br>
+                            </span>
+                        </li>
+                        <li class="list-inline-item">
+                            <span>
+                                <a href= "https://sirallanberg.itch.io/annoying-penguins" target="_blank"><img src = "https://img.itch.zone/aW1nLzQzMDg0OTgucG5n/315x250%23c/Rax3IY.png"  class="itchioImage"></a> 
+                                <p class="mb-0 centerAlign">Annoying Penguins</p>
+                                <p class="mb-0 centerAlign">-Terminado-</p>
+                                <br>
+                            </span>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </div>
