--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Manuel Abarca's Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -289,60 +289,81 @@
                     <h2 class="mb-5">My projects</h2>
                     <ul class="list-inline centerAlign">
                         <li class="list-inline-item">
-                            <span>
-                                <a href= "https://salmorejito-games.itch.io/tales-of-the-dumbgeon" target="_blank"><img src = "https://img.itch.zone/aW1nLzc0OTQwMjkucG5n/315x250%23c/eOFXwq.png"  class="itchioImage"></a> 
-                                <p class="mb-0 centerAlign">Tales of the Dumbgeon</p>
-                                <p class="mb-0 centerAlign">-Fase beta-</p>
-                                <br>
-                            </span>
+                            <div class = "img__wrap">
+                                <img src = "https://img.itch.zone/aW1nLzc0OTQwMjkucG5n/315x250%23c/eOFXwq.png"  class="itchioImage">
+                                <div class="img__description_layer">
+                                    <p class="img__description">Explore the dumbgeon in this roguelike game full of adventure and fun. Use the cards to get new equipment and defeat the evil Jojomamalo</p>
+                                </div>
+                            </div>
+                            <a href= "https://salmorejito-games.itch.io/tales-of-the-dumbgeon" target="_blank"><p class="centerAlign mb-0">Tales of the Dumbgeon</p></a> 
+                            <p class="mb-0 centerAlign">-Beta Stage-</p>
+                            <br>
                         </li>
                         <li class="list-inline-item">
-                            <span>
-                                <a href= "https://dakexd.itch.io/trivia-games" target="_blank"><img src = "https://img.itch.zone/aW1nLzc0MTUzOTIucG5n/315x250%23c/IDOW1g.png"  class="itchioImage"></a> 
-                                <p class="mb-0 centerAlign">Triviagames</p>
-                                <p class="mb-0 centerAlign">-Terminado-</p>
-                                <br>
-                            </span>
+                            <div class = "img__wrap">
+                                <img src = "https://img.itch.zone/aW1nLzc0MTUzOTIucG5n/315x250%23c/IDOW1g.png"  class="itchioImage">
+                                <div class="img__description_layer">
+                                    <p class="img__description">A trivia game for Android about videogames, explore 3 difficulty modes and compete to reach the top position in the local score</p>
+                                </div>
+                            </div>
+                            <a href= "https://dakexd.itch.io/trivia-games" target="_blank"><p class="mb-0 centerAlign">Triviagames</p></a> 
+                            <p class="mb-0 centerAlign">-Finished-</p>
+                            <br>
                         </li>
                         <li class="list-inline-item">
-                            <span>
-                                <a href= "https://dakexd.itch.io/noodletaker" target="_blank" ><img src="https://img.itch.zone/aW1nLzYzODg1MDkucG5n/315x250%23c/yfOWra.png" class="itchioImage"></a>
-                                <p class="mb-0 centerAlign">Noodletaker</p>
-                                <p class="mb-0 centerAlign">-Fase beta-</p>
-                                <br>
-                            </span>
+                            <div class = "img__wrap">
+                                <img src="https://img.itch.zone/aW1nLzYzODg1MDkucG5n/315x250%23c/yfOWra.png" class="itchioImage">
+                                <div class="img__description_layer">
+                                    <p class="img__description">An browser competitive game made in Phaser 3, featuring matchmaking and local/online multiplayer. Reach the end of the race with the noodle bowl and avoid being captured by the samurai</p>
+                                </div>
+                            </div>
+                            <a href= "https://dakexd.itch.io/noodletaker" target="_blank"> <p class="mb-0 centerAlign">Noodletaker</p></a> 
+                            <p class="mb-0 centerAlign">-Finished-</p>
+                            <br>
                         </li>
                         <li class="list-inline-item">
-                            <span>
-                                <a href= "https://dakexd.itch.io/zombieshooter-vr" target="_blank"><img src = "https://img.itch.zone/aW1nLzc0OTQyNTIucG5n/315x250%23c/chT%2FYl.png"  class="itchioImage"></a> 
-                                <p class="mb-0 centerAlign">Zombie Shooter VR</p>
-                                <p class="mb-0 centerAlign">-Fase Alfa-</p>
-                                <br>
-                            </span>
+                            <div class = "img__wrap">
+                                <img src = "https://img.itch.zone/aW1nLzc0OTQyNTIucG5n/315x250%23c/chT%2FYl.png"  class="itchioImage">
+                                <div class="img__description_layer">
+                                    <p class="img__description">A mobile VR game that uses Google Cardboard and a Marker to detect head and gun rotations. Defeat waves of enemys and survive in this zombie shooter.</p>
+                                </div>
+                            </div>
+                            <a href= "https://dakexd.itch.io/zombieshooter-vr" target="_blank"> <p class="mb-0 centerAlign">Zombie Shooter VR</p></a> 
+                            <p class="mb-0 centerAlign">-Alpha Stage-</p>
+                            <br>
                         </li>
                         <li class="list-inline-item">
-                            <span>
-                                <a href= "https://sayotito.itch.io/juliettes-portrait" target="_blank"><img src = "https://img.itch.zone/aW1nLzc0MTU0ODUucG5n/315x250%23c/r2cF1r.png"  class="itchioImage"></a> 
-                                <p class="mb-0 centerAlign">Juliette's Portrait</p>
-                                <p class="mb-0 centerAlign">-Terminado-</p>
-                                <br>
-                            </span>
+                            <div class = "img__wrap">
+                                <img src = "https://img.itch.zone/aW1nLzc0MTU0ODUucG5n/315x250%23c/r2cF1r.png"  class="itchioImage">
+                                <div class="img__description_layer">
+                                    <p class="img__description">A RPG game made in RPG Maker. Explore the mistery about Juliette's dead and follow the clues that he ghost left</p>
+                                </div>
+                            </div>
+                            <a href= "https://sayotito.itch.io/juliettes-portrait" target="_blank"> <p class="mb-0 centerAlign">Juliette's Portrait</p></a> 
+                            <p class="mb-0 centerAlign">-Finished-</p>
+                            <br>
                         </li>
                         <li class="list-inline-item">
-                            <span>
-                                <a href= "https://miniponti.itch.io/un-famous" target="_blank"><img src="https://img.itch.zone/aW1nLzUyMDQyOTEucG5n/315x250%23c/hyf8Qr.png"  class="itchioImage"></a>
-                                <p class="mb-0 centerAlign">Un-Famous</p>
-                                <p class="mb-0 centerAlign">-On hold-</p>
-                                <br>
-                            </span>
+                            <div class = "img__wrap">
+                                <img src = "https://img.itch.zone/aW1nLzUyMDQyOTEucG5n/315x250%23c/hyf8Qr.png"  class="itchioImage">
+                                <div class="img__description_layer">
+                                    <p class="img__description">A rythm game where you have to flirt with literally pieces of art at the music beat</p>
+                                </div>
+                            </div>
+                            <a href= "https://miniponti.itch.io/un-famous" target="_blank"> <p class="mb-0 centerAlign">Un-Famous</p></a> 
+                            <p class="mb-0 centerAlign">-On hold-</p>
+                            <br>
                         </li>
                         <li class="list-inline-item">
-                            <span>
-                                <a href= "https://sirallanberg.itch.io/annoying-penguins" target="_blank"><img src = "https://img.itch.zone/aW1nLzQzMDg0OTgucG5n/315x250%23c/Rax3IY.png"  class="itchioImage"></a> 
-                                <p class="mb-0 centerAlign">Annoying Penguins</p>
-                                <p class="mb-0 centerAlign">-Terminado-</p>
-                                <br>
-                            </span>
+                            <div class = "img__wrap">
+                                <img src = "https://img.itch.zone/aW1nLzQzMDg0OTgucG5n/315x250%23c/Rax3IY.png"  class="itchioImage">
+                                <div class="img__description_layer">
+                                    <p class="img__description">Local multiplayer game where you controll a penguin and have to race vs your opponent in a very cold track</p>
+                                </div>
+                            </div>
+                            <a href= "https://sirallanberg.itch.io/annoying-penguins" target="_blank"> <p class="mb-0 centerAlign">Annoying Penguins</p></a> 
+                            <p class="mb-0 centerAlign">-Finished-</p>
+                            <br>
                         </li>
                     </ul>
                 </div>
