--- a/index.html
+++ b/index.html
@@ -64,11 +64,27 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Videogame Prototype Developer</h3>
+                            <div class="subheading mb-3">Flying Beast Labs</div>
+                            <p>Develop videogame prototypes from scratch in unity to test game ideas and try concepts and mechanics</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Videogame Development Teacher</h3>
+                            <div class="subheading mb-3">Lifecole</div>
+                            <p>Teach groups of kids how videogames and his development works, and help them start in programming and creating games</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Lead Programmer</h3>
                             <div class="subheading mb-3">Salmorejo Games</div>
                             <p>Lead the programming team and implement and produce a full navigator videogame for computers and smartphones using Unity. Help junior programmers and manage the team's GitHub</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - December 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
